force-app/main/default/objects/SF_TO_SF_FIELD_MAPPING__mdt/SF_TO_SF_FIELD_MAPPING__mdt.object-meta.xml
<CustomObject>
    <label>SF_TO_SF_FIELD_MAPPING</label>
    <pluralLabel>SF_TO_SF_FIELD_MAPPING</pluralLabel>
</CustomObject>