force-app/main/default/objects/SF_TO_SF_FIELD_MAPPING__mdt/fields/External_Field_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>External_Field_Data_Type__c</fullName>
    <label>External Field Data Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>