force-app/main/default/objects/SF_TO_SF_FIELD_MAPPING__mdt/fields/External_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Object_Name__c</fullName>
    <label>External Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>