force-app/main/default/objects/SF_TO_SF_FIELD_MAPPING__mdt/fields/SF_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_Object_Name__c</fullName>
    <label>SF Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>