force-app/main/default/objects/SF_TO_SF_FIELD_MAPPING__mdt/listViews/SF_INTEGRATION.listView-meta.xml
<ListView>
    <fullName>SF_INTEGRATION</fullName>
    <columns>MasterLabel</columns>
    <columns>SF_Field_API_Name__c</columns>
    <columns>External_Field_API_Name__c</columns>
    <columns>SF_Object_Name__c</columns>
    <columns>External_Object_Name__c</columns>
    <columns>External_Field_Data_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>SF INTEGRATION</label>
</ListView>